--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1700,9 +1700,9 @@
 
 
         <section class="relative w-full h-auto md:h-48 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
-    <div class="w-full md:w-1/2 h-40 md:h-full bg-cover bg-center" 
-        style="background-image: url('../img/hpy.webp');">
-    </div>
+    <div class="w-full md:w-1/2 h-40 md:h-full bg-cover" 
+    style="background-image: url('../img/hpy.webp'); background-position: center 30%;">
+</div>
 
     <div class="w-full md:w-1/2 flex items-center justify-center p-6 md:p-8">
         <div class="text-gray-900 text-center flex flex-col items-center w-full">
@@ -1721,17 +1721,17 @@
  
 
 
-
-        <section class="relative w-full h-auto md:h-72 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
+        <!-- <section class="relative w-full h-auto md:h-72 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white">  -->
+            <section class="relative w-full h-auto md:h-48 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
             <div class="w-full md:w-1/2 h-64 md:h-full bg-cover bg-center" 
-                style="background-image: url('../img/hpy.webp');">
+                style="background-image: url('../img/Backyard/OIP.webp');">
             </div>
 
             <div class="w-full md:w-1/2 flex items-center p-8 md:p-12">
                 <div class="text-gray-900">
-                    <h3 class="text-3xl font-semibold mb-2">Chef's Special</h3>
+                    <h3 class="text-3xl font-semibold mb-2"> Introduce yourself to new neighbors, fresh flavors, and the joy of a shared table.</h3>
                     <p class="text-lg mb-6 text-gray-600 leading-relaxed">
-                        Try our signature lobster bisque today!
+                        “Pay over time with Affirm”. Terms apply.!
                     </p>
                     <button class="bg-orange-500 text-white font-bold px-8 py-3 rounded-full hover:bg-orange-600 transition-all shadow-sm active:scale-95">
                         View Details
@@ -1743,17 +1743,7 @@
 
 
  
-
-        <section class="relative w-full h-64 rounded-3xl overflow-hidden mb-6">
-            <img src="https://images.unsplash.com/photo-15593393524-4d01160291c1?w=1200&h=400&fit=crop" alt="Chef Special" class="w-full h-full object-cover">
-            <div class="absolute inset-0 bg-gradient-to-r from-orange-900 to-orange-600 bg-opacity-75 flex items-center">
-                <div class="px-8 text-white">
-                    <h3 class="text-3xl font-bold mb-2">something else -</h3>
-                    <p class="text-lg mb-4 opacity-90">Try our signature lobster bisque today!</p>
-                    <button class="bg-white text-orange-600 font-semibold px-6 py-3 rounded-lg hover:bg-gray-100 transition-colors">View Details</button>
-                </div>
-            </div>
-        </section>
+ 
 
 
 
