--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1763,7 +1763,7 @@
  
 
 
-        <!-- <section class="relative w-full h-auto md:h-72 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white">  -->
+       <!-- Banner 9 -->
             <section class="relative w-full h-auto md:h-48 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
             <div class="w-full md:w-1/2 h-64 md:h-full bg-cover bg-center" 
                 style="background-image: url('../img/Backyard/OIP.webp');">
