--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1759,71 +1759,9 @@
 
 
 
- 
- 
 
-
-       <!-- Banner 9 -->
-            <section class="relative w-full h-auto md:h-48 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
-            <div class="w-full md:w-1/2 h-64 md:h-full bg-cover bg-center" 
-                style="background-image: url('../img/Backyard/OIP.webp');">
-            </div>
-
-            <div class="w-full md:w-1/2 flex items-center p-8 md:p-12">
-                <div class="text-gray-900">
-                    <h3 class="text-3xl font-semibold mb-2"> Introduce yourself to new neighbors, fresh flavors, and the joy of a shared table.</h3>
-                    <p class="text-lg mb-6 text-gray-600 leading-relaxed">
-                        “Pay over time with Affirm”. Terms apply.!
-                    </p>
-                    <button class="bg-orange-500 text-white font-bold px-8 py-3 rounded-full hover:bg-orange-600 transition-all shadow-sm active:scale-95">
-                        View Details
-                    </button>
-                </div>
-            </div>
-        </section>
-
-
-
- 
- 
-
-
-
-        <!-- Banner 4 -->
-        <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/g.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-            <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
-                <div class="px-8 py-6 bg-white rounded-2xl max-w-[461px] mr-4 ml-16">
-                    <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Host your table confidently with InstaDelicious. </h2>
-                    <p class="text-lg mb-4 text-gray-600"> Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
-                    <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Open your Kitchen</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<!-- garden start  -->
-  <div class="text-left py-1 px-4 md:px-8 lg:px-16 xl:px-24">
-        <div class="flex justify-between items-center">
-            <div>
-                <h2 class="text-xl font-bold text-gray-800 mb-1">No heading</h2>
-            </div>
-            <div class="flex gap-2">
-                <button onclick="document.querySelector('.scrollbar-hide').scrollBy({left: -300, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-                    </svg>
-                </button>
-                <button onclick="document.querySelector('.scrollbar-hide').scrollBy({left: 300, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7-7" />
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- cities Cards Carousel -->
-    <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
+<!-- garden starts  -->
+    <div class="pb-12">
         <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
           
             <!-- Card 1 -->
@@ -1915,8 +1853,51 @@
  
         </div>
     </div>
+<!-- garden ends  -->
 
- <!-- garden end  -->
+ 
+ 
+
+
+       <!-- Banner 9 -->
+            <section class="relative w-full h-auto md:h-48 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
+            <div class="w-full md:w-1/2 h-64 md:h-full bg-cover bg-center" 
+                style="background-image: url('../img/Backyard/OIP.webp');">
+            </div>
+
+            <div class="w-full md:w-1/2 flex items-center p-8 md:p-12">
+                <div class="text-gray-900">
+                    <h3 class="text-3xl font-semibold mb-2"> Introduce yourself to new neighbors, fresh flavors, and the joy of a shared table.</h3>
+                    <p class="text-lg mb-6 text-gray-600 leading-relaxed">
+                        “Pay over time with Affirm”. Terms apply.!
+                    </p>
+                    <button class="bg-orange-500 text-white font-bold px-8 py-3 rounded-full hover:bg-orange-600 transition-all shadow-sm active:scale-95">
+                        View Details
+                    </button>
+                </div>
+            </div>
+        </section>
+
+
+
+ 
+ 
+
+
+
+        <!-- Banner 4 -->
+        <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/g.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+            <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
+                <div class="px-8 py-6 bg-white rounded-2xl max-w-[461px] mr-4 ml-16">
+                    <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Host your table confidently with InstaDelicious. </h2>
+                    <p class="text-lg mb-4 text-gray-600"> Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
+                    <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Open your Kitchen</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+ 
 
 
 
