--- a/public/index.html
+++ b/public/index.html
@@ -229,13 +229,20 @@
     <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto pointer-events-auto">
       <div class="flex items-center justify-between mb-8">
         <div class="flex-1 mr-4">
-          <input
+          <!-- <input
             type="text"
             id="overlaySearchInput"
             placeholder="Search for ideas..."
             class="w-full text-2xl font-light border-b-2 border-gray-200 pb-3 focus:outline-none focus:border-orange-500 transition bg-[#DADAD3]"
             autofocus
-          />
+          /> -->
+          <input
+  type="text"
+  id="overlaySearchInput"
+  placeholder="Search for ideas..."
+  class="w-full text-2xl font-light border-b-2 border-gray-200 py-6 focus:outline-none focus:border-orange-500 transition bg-[#DADAD3]"
+  autofocus
+/>
         </div>
         <button id="closeSearch" class="p-2 hover:bg-gray-100 rounded-full transition">
           <svg class="w-8 h-8 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
