--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,7 @@
         
         <h3 class="text-xl font-bold text-gray-900 mt-12 mb-2">Popular on UDO</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <a href="food/" class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[82.5px] flex items-center">
+          <a href="foods" class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[82.5px] flex items-center">
             <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=1600&h=600&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Food</span>
             <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -443,7 +443,7 @@
   </script>
 
   <!-- Footer -->
-  <footer class="bg-gray-100 text-gray-800">
+  <footer class="bg-[#b0b0a8] text-gray-800">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
         <!-- Company Info -->
@@ -451,7 +451,7 @@
           <h3 class="text-2xl font-bold mb-4">
             <span class="text-orange-500">U</span><span class="text-gray-800">DO™</span>
           </h3>
-          <p class="text-gray-600 text-sm leading-relaxed">
+          <p class="text-gray-700 text-sm leading-relaxed">
             Connect with verified professionals for any task. No middleman, no hidden fees, just quality service you can trust.
           </p>
         </div>
@@ -460,10 +460,10 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-gray-800">Quick Links</h4>
           <ul class="space-y-2">
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Home</a></li>
-            <li><a href="profiles-list/" class="text-gray-600 hover:text-orange-500 transition">Services</a></li>
-            <li><a href="join-as-professional/" class="text-gray-600 hover:text-orange-500 transition">Join as Pro</a></li>
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">How It Works</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Home</a></li>
+            <li><a href="profiles-list/" class="text-gray-700 hover:text-orange-500 transition">Services</a></li>
+            <li><a href="join-as-professional/" class="text-gray-700 hover:text-orange-500 transition">Join as Pro</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">How It Works</a></li>
           </ul>
         </div>
 
@@ -471,10 +471,10 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-gray-800">Support</h4>
           <ul class="space-y-2">
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Help Center</a></li>
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Safety</a></li>
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Contact Us</a></li>
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">FAQs</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Help Center</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Safety</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Contact Us</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">FAQs</a></li>
           </ul>
         </div>
 
@@ -482,10 +482,10 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-gray-800">Legal</h4>
           <ul class="space-y-2">
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Terms of Service</a></li>
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Privacy Policy</a></li>
-            <li><a href="#" class="text-gray-600 hover:text-orange-500 transition">Cookie Policy</a></li>
-            <li><a href="trademark/" class="text-gray-600 hover:text-orange-500 transition">Trademark</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Terms of Service</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Privacy Policy</a></li>
+            <li><a href="#" class="text-gray-700 hover:text-orange-500 transition">Cookie Policy</a></li>
+            <li><a href="trademark/" class="text-gray-700 hover:text-orange-500 transition">Trademark</a></li>
           </ul>
         </div>
 
@@ -493,13 +493,13 @@
         <div>
           <h4 class="text-lg font-semibold mb-4 text-gray-800">Language</h4>
           <div class="relative">
-            <select id="languageSelector" class="w-full bg-white text-gray-800 border border-gray-300 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-orange-500 cursor-pointer appearance-none pr-8">
+            <select id="languageSelector" class="w-full bg-white text-gray-800 border border-gray-400 rounded-lg px-4 py-2.5 focus:outline-none focus:ring-2 focus:ring-orange-500 cursor-pointer appearance-none pr-8">
               <option value="en" selected>English</option>
               <option value="es">Español</option>
               <option value="fr">Français</option>
             </select>
             <div class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none">
-              <svg class="w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
               </svg>
             </div>
@@ -508,29 +508,29 @@
       </div>
 
       <!-- Social Media & Copyright -->
-      <div class="border-t border-gray-300 mt-10 pt-8 flex flex-col md:flex-row justify-between items-center">
-        <p class="text-gray-600 text-sm mb-4 md:mb-0">
+      <div class="border-t border-gray-400 mt-10 pt-8 flex flex-col md:flex-row justify-between items-center">
+        <p class="text-gray-700 text-sm mb-4 md:mb-0">
           © 2026 U Do. All rights reserved.
         </p>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-500 hover:text-orange-500 transition">
+          <a href="#" class="text-gray-600 hover:text-orange-500 transition">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
             </svg>
           </a>
-          <a href="#" class="text-gray-500 hover:text-orange-500 transition">
+          <a href="#" class="text-gray-600 hover:text-orange-500 transition">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M12 2.163c3.204 0 3.584.012 4.85.072 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
             </svg>
           </a>
-          <a href="#" class="text-gray-500 hover:text-orange-500 transition">
+          <a href="#" class="text-gray-600 hover:text-orange-500 transition">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"/>
             </svg>
           </a>
-          <a href="#" class="text-gray-500 hover:text-orange-500 transition">
+          <a href="#" class="text-gray-600 hover:text-orange-500 transition">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667h-3.554v-11.452h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zm-15.11-13.019c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019h-3.564v-11.452h3.564v11.452zm15.106-20.452h-20.454c-.979 0-1.771.774-1.771 1.729v20.542c0 .956.792 1.729 1.771 1.729h20.451c.978 0 1.778-.773 1.778-1.729v-20.542c0-.955-.8-1.729-1.778-1.729z"/>
+              <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667h-3.554v-11.452h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286nm-15.11-13.019c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019h-3.564v-11.452h3.564v11.452zm15.106-20.452h-20.454c-.979 0-1.771.774-1.771 1.729v20.542c0 .956.792 1.729 1.771 1.729h20.451c.978 0 1.778-.773 1.778-1.729v-20.542c0-.955-.8-1.729-1.778-1.729z"/>
             </svg>
           </a>
         </div>
