--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -20,7 +20,7 @@
       right: 0;
       border-color: #f97316;
     }
-    .toggle-checkbox:checked + .toggle-label {
+    .toggle-checkbox:checked + .toggle-label 
       background-color: #f97316;
     }
     
