--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Home improvement</p>
-          <p class="text-4xl font-semibold">Mount art or shelves</p>
+          <p class="text-4xl font-semibold"> Mount art or shelves</p>
         </div>
       </a>
 
@@ -267,7 +267,7 @@
           </div>
           </a>
 
-          <a href="/profiles-list">
+          <a href="/rideshare">
           <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[82.5px] flex items-center">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -275,7 +275,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium"> Roadie/ Currie Driver </span>
           </div>
           </a>
 
