--- a/public/BK/pinterest.html
+++ b/public/BK/pinterest.html
@@ -20,6 +20,7 @@
   <meta content=274266067164 property=fb:app_id>
   <meta content=Pinterest property=og:site_name>
   <title>Pinterest</title>
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2270%22 font-family=%22Arial, sans-serif%22 font-weight=%22900%22 letter-spacing=%22-2%22><tspan fill=%22%23f97316%22>U</tspan><tspan fill=%22%23000000%22>DO</tspan></text></svg">  
   <meta content=Pinterest data-app=true name=al:android:app_name property=al:android:app_name>
   <meta content=com.pinterest data-app=true name=al:android:package property=al:android:package>
   <meta content=pinterest:// data-app=true name=al:android:url property=al:android:url>
