--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,8 @@
           </button>
         </div>
       </div>
-      <div class="flex items-center gap-3">
+      <div class="flex items-center gap-6">
+        <a href="Why-Udo/" class="text-gray-700 hover:text-orange-500 font-medium text-base transition">Why UDO?</a>
         <a href="login/" class="text-gray-700 hover:text-orange-500 font-medium text-base transition">Sign in</a>
         <a href="signup/" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2.5 px-6 rounded-full text-base transition duration-300 shadow-sm hover:shadow-md">Join</a>
       </div>
@@ -232,17 +233,10 @@
     <div class="mx-4 pt-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto pointer-events-auto">
       <div class="flex items-center justify-between mb-8">
         <div class="flex-1 mr-4">
-          <!-- <input
-            type="text"
-            id="overlaySearchInput"
-            placeholder="Search for ideas..."
-            class="w-full text-2xl font-light border-b-2 border-gray-200 pb-3 focus:outline-none focus:border-orange-500 transition bg-[#DADAD3]"
-            autofocus
-          /> -->
           <input
             type="text"
             id="overlaySearchInput"
-            placeholder="Search for ideas..."
+            placeholder="What do you need done today?"
             class="w-full text-2xl font-light border-b-2 border-gray-200 py-4 focus:outline-none focus:border-orange-500 transition bg-[#DADAD3]"
             autofocus
           />
